 [build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmeter-sdk"
version = "0.1.0"
authors = [
    {name = "AgentMeter Team", email = "support@agentmeter.com"},
]
description = "Python SDK for AgentMeter - Track and meter agent API usage and token consumption"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["agentmeter", "ai", "tracking", "monitoring", "langchain", "agents", "llm"]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=1.8.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0.0",
    "requests-mock>=1.9.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.991",
    "isort>=5.0",
    "pre-commit>=2.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[project.urls]
Homepage = "https://agentmeter.com"
Documentation = "https://docs.agentmeter.com/sdk/python"
Repository = "https://github.com/agentmeter/agentmeter-sdk-python"
"Bug Tracker" = "https://github.com/agentmeter/agentmeter-sdk-python/issues"
Changelog = "https://github.com/agentmeter/agentmeter-sdk-python/blob/main/CHANGELOG.md"

[project.scripts]
agentmeter = "agentmeter.cli:main"

[tool.setuptools.packages.find]
include = ["agentmeter*"]

[tool.setuptools.package-data]
agentmeter = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "langchain: Tests requiring LangChain",
]